# x-algorithm

tutorial/: CURRICULUM.md
tutorial/exercises/mini-recommender/: Cargo.toml
tutorial/exercises/mini-recommender/src/: candidate.rs  filter.rs  hydrator.rs  lib.rs  main.rs  pipeline.rs  pipeline_traits.rs  query.rs  query_hydrator.rs  scorer.rs  selector.rs  source.rs
tutorial/lessons/: 01-recsys-overview.md  02-pipeline-framework.md  03-trait-system.md  04-home-mixer-arch.md  05-query-hydrators.md  06-sources.md  07-filters.md  08-scorers.md  09-thunder.md  10-phoenix-overview.md  11-retrieval-model.md  12-ranking-model.md  13-attention-mask.md  14-design-patterns.md  15-hands-on-project.md
