[package]
name = "mini-recommender"
version = "0.1.0"
edition = "2021"

[dependencies]
# 由于 candidate-pipeline 是内部 crate，我们可以复制其核心 trait 定义
# 这里为了简化，tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.10"
uuid = { version = "1", features = ["v4"] }
